# scenario-foundry

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/scenarios/: joensuu.json  scenario_guide.md
config/schemas/: scenario.schema.json
src/: __init__.py  config.py  export_scenario.py  generate_scenario.py
src/generation/: fetch_terrain.py  generate_sensor_data.py  optimize_vectors.py
src/sapient_msg/: proto_options_pb2.py
src/sapient_msg/bsi_flex_335_v2_0/: associated_detection_pb2.py  associated_file_pb2.py  detection_report_pb2.py  location_pb2.py  range_bearing_pb2.py  velocity_pb2.py
src/scenario-foundry/: config.py
src/scenario-foundry/validation/: validate.py
src/scenario_foundry/: export_scenario.py  generate_scenario.py
src/scenario_foundry/generation/: fetch_terrain.py  generate_sensor_data.py  optimize_vectors.py
src/scenario_foundry/sapient/: builder.py
src/scenario_foundry/validation/: validate.py
src/validation/: validate.py
