[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario-foundry"
version = "0.1.0"
description = "SAPIENT Network Tactical Scenario and Sensor Telemetry Generator"
authors = [
    { name = "Lempea Edge Oy / DEFINE AI Foundry" }
]
readme = "README.md"
requires-python = ">=3.8"

# These are the packages installed automatically when someone runs `pip install -e .`
dependencies = [
    "python-dotenv==1.1.1",
    "jsonschema",
    "shapely",
    "protobuf>=4.25.8",
    "zipp>=3.19.1",
    "numpy>=1.22.0"
]

# OPTIONAL BUT HIGHLY RECOMMENDED: 
# This turns your scripts into system-wide command line tools.
[project.scripts]
generate-scenario = "scenario_foundry.generate_scenario:main"
generate-sensor-data = "scenario_foundry.generate_sensor_data:main"
export-scenario = "scenario_foundry.export_scenario:main"

# This is the magic that fixes your ModuleNotFoundError. 
# It tells Python that your actual code is hidden inside the src/ folder.
[tool.setuptools.packages.find]
where = ["src"]